--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,8 @@
+# APP
+APP_PORT=
+APP_BASE_URL=
+
+# DATABASE
 DATABASE_DIALECT=
 DATABASE_USERNAME=
 DATABASE_PASSWORD=
@@ -5,10 +10,10 @@ DATABASE_HOST=
 DATABASE_PORT=
 DATABASE_NAME=
 
+# JWT
 JWT_SECRET=
 
-
+# UKR_NET
 UKR_NET_EMAIL=
 UKR_NET_PASSWORD=
 
-BASE_URL=
